--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-kakao/core": "^2.2.6",
     "@react-native-kakao/user": "^2.2.6",
+    "@react-native-menu/menu": "^1.1.6",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "expo": "~52.0.6",
@@ -28,21 +29,26 @@
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.2",
     "expo-router": "^3.1.0",
+    "expo-secure-store": "~14.0.0",
     "expo-splash-screen": "~0.29.9",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.2",
     "expo-web-browser": "~14.0.1",
+    "frisbee": "^3.1.0",
+    "pretendard": "^1.3.9",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.1",
+    "react-native-calendars": "^1.1307.0",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
-    "expo-secure-store": "~14.0.0"
+    "react-navigation-header-buttons": "^12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
