--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-dev-client": "~5.0.1",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
+    "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.2",
     "expo-router": "^3.1.0",
     "expo-secure-store": "~14.0.0",
@@ -43,6 +44,7 @@
     "react-native-calendars": "^1.1307.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
@@ -58,6 +60,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~52.0.1",
     "metro": "^0.81.0",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
