--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "react-native-screens": "~4.0.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
-    "react-navigation-header-buttons": "^12.0.1"
+    "react-navigation-header-buttons": "^12.0.1",
+    "expo-build-properties": "~0.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
